# SchemaAgent

./: Dockerfile  build.sh  main.py  output.json  pyproject.toml  render.yaml  requirements.txt  start.py
src/: graph.py  models.py  scraper.py
