[project]
name = "schema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.124.4",
    "langchain-core>=1.1.3",
    "langgraph>=1.0.4",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
]
